@@ -29,7 +29,6 @@ File::Path                  = 2.08
 File::Touch                 = 0.08
 DBIx::Class                 = 0.08121
 Moose                       = 1.0
-Method::Signatures::Simple  = 0.05
 MooseX::Role::Parameterized = 0.18
 Try::Tiny                   = 0
 SQL::Translator             = 0.11005
